# multimaze_recorder

./: .gitignore  Ex_CV_Snap.py  Ex_HardTrigger.py  Ex_SaveImageTrigger.py  GUI.py  GUI_old.py  HTrigger_Continuous.ino  HTrigger_Duration.ino  INSTALL.md  Images_manips.ipynb  LICENSE  LiveStream.py  README.md  Record.py  Record_images.py  Record_images_HTrigger.py  Record_images_HTrigger_QT.py  Record_images_HTrigger_tk.py  Record_images_Trigger.py  Record_video.py  Record_video_Example.py  RunGUI.sh  Snap_images.py  StatsSummary.ipynb  TIS.py  Trigger_images.py  Trigger_images_old.py  Utilities.py  Video_utilities.ipynb  experiments.json  install_desktop.sh  jsonfiles_manips.ipynb  pyproject.toml  recordingtests.ipynb  variables_registry.json
GUI/: ExperimentWindow.py  Launcher.py  MainWindow.py  ProcessingWindow.py  Settings.py  Utilities.py  experiments.json  metadata.json
GUI/Metadata_Registries/: variables_registry_Standard.json
GUI/Metadata_Templates/: F1_Tracks.json  Infection_corridors.json  variables_registry_BallPushing.json  variables_registry_Standard.json
GUI/Presets/: standard_set.json
ImageCapture_Trigger/: ImageCapture_Trigger.ino
ImageCapture_Trigger.ino/: ImageCapture_Trigger.ino.ino
Metadata_Registries/: variables_registry_BallPushing.json
MotorControl/: BACKUP.py  MotorControl.py  MotorControlAdjustedPC.py  MotorNew.py  graph_new.py  manualCommand.py  motorControlWorking.py  template_divided.py  template_showcase.py
MotorControl/xyz/: xyz.ino
MotorControl/xyzPerfect/: xyzPerfect.ino
Presets/: standard_set.json
Processing/: Array2Arenas.py  Array2Corridors.py  Array2F1tracks.py  Array2HorizontalCorridors.py  BatchVerifyExperiments.py  Boundaries_detection.py  CheckCrops.sh  CheckProcess.py  CheckTracks.py  CheckTracks.sh  CheckVideos.py  CheckVideos.sh  F1_assign_ball_id.py  FlyBallTracker_F1.py  Images2Vids.py  MakeVideos.sh  ProcessImages.sh  VerifyProcessedExperiments.py  convert_fly_slp_to_h5.sh  detect_orientation.sh  experiments_to_recombine.yaml  remove_tracking_files.sh  track_fly_full.sh  trackvideos_flyball.sh  trackvideos_flyball_F1.sh  verify_cropping.py
Tests/: PreDirectoryMake.py  jsonfiles_manips.ipynb  recordingtests.ipynb
examples/: Ex_HardTrigger.py  Ex_SaveImageTrigger.py  Record_video_Example.py
notebooks/: Gstreamer_tests.ipynb
processing_commands/: CheckCrops.sh  CheckTracks.sh  CheckVideos.sh  Crops_params.json  MakeVideos.sh  ProcessImages.sh  SplitnRotate.sh  convert_fly_slp_to_h5.sh  detect_orientation.sh  experiments_to_track_computer1.yaml  experiments_to_track_computer2.yaml  remove_tracking_files.sh  track_fly_full.sh  trackvideos_flyball.sh  trackvideos_flyball_F1.sh
src/multimaze_recorder/: utilities.py
src/multimaze_recorder/camera/: __init__.py  tis.py
src/multimaze_recorder/gui/: experiment_window.py  main.py  processing_window.py  settings.py  settings_pane.py  widgets.py
src/multimaze_recorder/motor_control/: MotorNewUpdated.py  zaber.py
src/multimaze_recorder/processing/: array_to_arenas.py  array_to_corridors.py  array_to_f1_tracks.py  array_to_h_corridors.py  assign_ball_id.py  batch_recombine.py  batch_verify.py  boundaries.py  check_process.py  check_tracks.py  check_videos.py  images_to_videos.py  recombine_videos.py  test_arenas.py  test_recombine.py  tracker_f1.py  verify_cropping.py  verify_processed.py
tests/: conftest.py  test_arena_order.py  test_camera.py  test_metadata.py  test_settings.py  test_system_deps.py  test_utilities.py
(+12 files in other folders)
