[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimaze_recorder"
version = "0.2.0"
description = "High-throughput recording and analysis tools for the multimaze experimental setup"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.7",
    "PyQt6>=6.5",
    "tqdm>=4.65",
    "PyYAML>=6.0",
    "pyserial>=3.5",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "pandas>=1.5",
    "Pillow>=9.4",
    "imageio>=2.31",
    "dask>=2023.6",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "platformdirs>=3.0",
    # PyGObject requires system packages first – see INSTALL.md
    # Run: sudo apt install libgirepository1.0-dev libglib2.0-dev
    # Pin <3.50 for Ubuntu 22.04 (girepository-1.0); Ubuntu 24.04 supports >=3.50
    "PyGObject>=3.44,<3.50",
]

[project.optional-dependencies]
processing = [
    "sleap-io",
    # utils_behavior is a separate lab package – install manually if needed
]
tracking = [
    # Full SLEAP package (needed for sleap-track / sleap-convert CLI tools).
    # GPU support requires a compatible CUDA installation; see INSTALL.md.
    "sleap",
    "sleap-io",
]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-mock>=3.11",
]

[project.scripts]
# Recording
mmrecorder            = "multimaze_recorder.gui.main:main"
mmrecorder-snap       = "multimaze_recorder.scripts.snap:main"
mmrecorder-trigger    = "multimaze_recorder.scripts.trigger:main"
mmrecorder-livestream = "multimaze_recorder.scripts.livestream:main"
# Processing – image cropping
mmrecorder-crop-arenas      = "multimaze_recorder.processing.array_to_arenas:main"
mmrecorder-crop-corridors   = "multimaze_recorder.processing.array_to_corridors:main"
mmrecorder-crop-f1          = "multimaze_recorder.processing.array_to_f1_tracks:main"
mmrecorder-crop-h-corridors = "multimaze_recorder.processing.array_to_h_corridors:main"
# Processing – video pipeline
mmrecorder-images-to-videos = "multimaze_recorder.processing.images_to_videos:main"
mmrecorder-check-videos     = "multimaze_recorder.processing.check_videos:main"
mmrecorder-check-process    = "multimaze_recorder.processing.check_process:main"
mmrecorder-recombine        = "multimaze_recorder.processing.recombine_videos:main"
mmrecorder-batch-recombine  = "multimaze_recorder.processing.batch_recombine:main"
# Processing – verification
mmrecorder-verify-processed = "multimaze_recorder.processing.verify_processed:main"
mmrecorder-verify-cropping  = "multimaze_recorder.processing.verify_cropping:main"
mmrecorder-batch-verify     = "multimaze_recorder.processing.batch_verify:main"
# Processing – tracking
mmrecorder-track-f1         = "multimaze_recorder.processing.tracker_f1:main"
mmrecorder-assign-ball-id   = "multimaze_recorder.processing.assign_ball_id:main"
mmrecorder-check-tracks     = "multimaze_recorder.processing.check_tracks:main"
# Processing – diagnostics
mmrecorder-test-arenas      = "multimaze_recorder.processing.test_arenas:main"
mmrecorder-test-recombine   = "multimaze_recorder.processing.test_recombine:main"
mmrecorder-boundaries       = "multimaze_recorder.processing.boundaries:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multimaze_recorder"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
